test/library/standard/BigInteger/divQByZero.good
divQByZero.chpl:6: error: halt reached - Attempt to divide by zero
