test/library/standard/BigInteger/divQByZero.chpl
use BigInteger;

var a: bigint = 15;
var b = 0;
var res: bigint;
divQ(res, a, b);
